Finish user doc
